<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">당신의 앱 이름</string>
    <string name="user_id">아이디</string>
    <string name="edit_plot">줄거리 수정</string>
    <string name="create_plot">플롯 생성</string>
    <string name="ai_story_usage">AI 스토리 사용법</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="select_my_book">로그인 후 나의 동화책 선택</string>
    <string name="create_new_story">새로운 스토리 만들러 가기 선택</string>
    <string name="input_plot">줄거리 입력</string>
    <string name="go_create_book">동화책 만들러 가기 선택</string>
    <string name="my_book">나의 동화책</string>
    <string name="login_image_desc">로그인 이미지</string>
    <string name="email_hint">이메일 주소</string>
    <string name="password_hint">비밀번호</string>
    <string name="google_login">구글로 로그인</string>
    <string name="default_text">TextView</string>
    <string name="author_name">작가님 이름</string>
    <string name="go_to_storybook_creation">동화책 만들러 가기</string>
    <string name="new_password_hint">새로운 비밀번호를 입력하세요</string>
    <string name="save_changes">정보 수정</string>
    <string name="modify_user_info">회원정보 수정</string>
    <string name="usage_guide">이용안내</string>
    <string name="logout">로그아웃</string>
    <string name="generate">생성하기</string>
</resources>