<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="707dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="123dp"
            android:layout_height="75dp"
            android:layout_gravity="left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/main_logo"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="-1dp" />

        <Button
            android:id="@+id/guide_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#d9d9d9"
            android:text="@string/ai_story_usage"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/user_profile"
            android:layout_width="271dp"
            android:layout_height="290dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.557"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_btn"
            app:srcCompat="@drawable/home1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="338dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Login_btn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#fff628"
                android:text="@string/login"
                android:textColor="#000000"
                app:layout_constraintEnd_toStartOf="@+id/Sign_btn"
                app:layout_constraintTop_toBottomOf="@+id/user_profile" />

            <Space
                android:layout_width="20dp"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/Sign_btn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#fff628"
                android:text="@string/signup"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/Login_btn"
                app:layout_constraintTop_toBottomOf="@+id/user_profile" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
